<!--
  Copyright (c) 2012 Fernando E. M. López <flopez AT linti.unlp.edu.ar>.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
-->
<resources>

    <string name="app_name">RemoteBot</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">RemoteBot</string>
    <string name="title_activity_controls">RemoteBot</string>
    <string name="server">Servidor</string>
    <string name="robot">Robot</string>
    <string name="device">Dispositivo</string>
    <string name="forward">Adelante</string>
    <string name="backward">Atrás</string>
    <string name="left">Izquierda</string>
    <string name="right">Derecha</string>
    <string name="stop">Detener</string>
    <string name="speed">Velocidad</string>
    <string name="obstacle_distance">Mostrar distancia a obstáculo</string>
    <string name="stop_on_obstacle">Detenerse al detectar obstáculo</string>
    <string name="default_url">http://163.10.10.120:8000</string>
    <string name="slow_turn">Giro lento</string>

</resources>
